--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </a>
         <h5>&copy; 2026 Katch Downloader</h5>
     </footer>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="1de61ee7-6337-43a0-9e60-e1f819ac7b33"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6569479183242788"
      crossorigin="anonymous"></script>
     <script src="main.js"></script>
